--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
-                      <a target="_blank" href="https://calendar.google.com/calendar/u/0?cid=cjVxa284N3NwaG5lcjU2aWMxdWhtcDRqZzBAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ"><button type="button" class="btn btn-outline-danger btn-sm courses">CLASS SCHEDULE</button></a>
+                      <a target="_blank" href="class_schedule.html"><button type="button" class="btn btn-outline-danger btn-sm courses">CLASS SCHEDULE</button></a>
                       <a target="_blank" href="https://rsk.iitk.ac.in/"><button type="button" class="btn btn-outline-warning btn-sm courses">MAIN WEBSITE</button></a>
                   </div>
 
