--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
               }
 
               //-->
-          <!-- </SCRIPT>  -->
+          <!-- </SCRIPT> 
          
         
           <meta name="viewport" content="width=device-width, initial-scale=1">
