--- a/chem3.html
+++ b/chem3.html
@@ -93,7 +93,7 @@
         <div class="mid4">
             <div style="background-color: rgb(18,18,18);" class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/16NWr_C8Gy88m3AlRGRHjRuuRQhe3VT33?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/16NWr_C8Gy88m3AlRGRHjRuuRQhe3VT33?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <a target="_blank" href="https://drive.google.com/drive/folders/1PeNvRHVgmj_OKgm-LyOH5il0gZELxMng?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
