--- a/math14.html
+++ b/math14.html
@@ -105,7 +105,7 @@
             <div class="mid4">
                 <div style="background-color: rgb(18,18,18);" class="row">
                     <div class="col-lg-3 col-md-3 col-sm-12">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/1dcajFZq8p3Qx1J-b4wvWd5RW7-dADqO2?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                        <a target="_blank" href="https://drive.google.com/drive/folders/1dcajFZq8p3Qx1J-b4wvWd5RW7-dADqO2?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <a target="_blank" href="https://drive.google.com/drive/folders/1xLLk_t3GWMB0C0CTHPXF6XFe054J4Ymf?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
