--- a/math15.html
+++ b/math15.html
@@ -105,7 +105,7 @@
                 <div class="mid4">
                     <div style="background-color: rgb(18,18,18);" class="row">
                         <div class="col-lg-3 col-md-3 col-sm-12">
-                            <a target="_blank" href="https://drive.google.com/drive/folders/1vy6OvknJWzJ8VqYOBx18meX27G5wDeQw?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                            <a target="_blank" href="https://drive.google.com/drive/folders/1vy6OvknJWzJ8VqYOBx18meX27G5wDeQw?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                         </div>
                         <div class="col-lg-3 col-md-3 col-sm-12">
                             <a target="_blank" href="https://drive.google.com/drive/folders/11Zwl8sTzByorfvdT2GVllwApQcickIy8?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
