--- a/math4.html
+++ b/math4.html
@@ -105,7 +105,7 @@
         <div class="mid4">
             <div style="background-color: rgb(18,18,18);" class="row">
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1uerxWumi5PdflJCba51vmtg3NC4E5BSf?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="_blank" href="https://drive.google.com/drive/folders/1uerxWumi5PdflJCba51vmtg3NC4E5BSf?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <a target="_blank" href="https://drive.google.com/drive/folders/14e3DiSy-NNvS_kwwzu0dUJj2jan2wYjS?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
