--- a/math9.html
+++ b/math9.html
@@ -106,7 +106,7 @@
                 <div style="background-color: rgb(18,18,18);" class="row">
                     
                     <div class="col-lg-3 col-md-3 col-sm-12">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/1TsKV16dSyN_hvondneBwnaMM-y904zU1?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                        <a target="_blank" href="https://drive.google.com/drive/folders/1TsKV16dSyN_hvondneBwnaMM-y904zU1?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <a target="_blank" href="https://drive.google.com/drive/folders/1LtHwpuL1huXWR2giv5SL8fc3uIiGmk6S?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
