--- a/phy2.html
+++ b/phy2.html
@@ -95,7 +95,7 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1yi7Cpoi_NhU0nW0H85ZkHGC4dqSB9T2N?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1yi7Cpoi_NhU0nW0H85ZkHGC4dqSB9T2N?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <a target="blank" href="https://drive.google.com/drive/folders/18Zml8cSKVwnXY7yENUT4h3p7vJdcNGeM?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
