--- a/phy3.html
+++ b/phy3.html
@@ -95,7 +95,7 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1XnFtcEKNe9N6WVqE-paBemaSmcrJ1nW8?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1XnFtcEKNe9N6WVqE-paBemaSmcrJ1nW8?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
                     <a target="blank" href="https://drive.google.com/drive/folders/1Ef36OdJbsnhq8gjmcbVNHmnbODbqNtfi?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
