--- a/phy4.html
+++ b/phy4.html
@@ -95,7 +95,7 @@
             <div style="background-color: rgb(18,18,18);" class="row">
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1huKdY-qbXrK7P0x03BUe1IoVj_IqEtM8?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">NOTES</button></a>
+                    <a target="blank" href="https://drive.google.com/drive/folders/1huKdY-qbXrK7P0x03BUe1IoVj_IqEtM8?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
