--- a/math1.html
+++ b/math1.html
@@ -108,7 +108,7 @@
                         <a target="_blank" href="https://drive.google.com/drive/folders/1pkeIX7h75tbL4I8gecPkmYJMGw7Wm30N?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
-                        <a target="_blank" href="https://drive.google.com/drive/folders/1JhXmvZMUPDKYjnCUJbaG-zwLZ1svcwNx?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                        <a target="_blank" href="https://youtube.com/playlist?list=PLNH1H4kKR1nxNf0lIGywMmnWEfa-yPRUD"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-12">
                         <a target="_blank" href="https://drive.google.com/drive/folders/1h0UtH6KQNMJHw6M72dcjXbbqd13ciW4n?usp=sharing"><button type="button" class="btn btn-outline-warning btn-sm courses" style="width: 250px;;">OTHER RESOURCES</button></a>
