--- a/chem1.html
+++ b/chem1.html
@@ -97,7 +97,7 @@
                     <a target="_blank" href="https://drive.google.com/drive/folders/1v6LdKkMQd2z1mTAs0a3OgEtzNjWFOgix?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1fITNJAbj_oznh4JEUJbK1MpZEgLUXnIy?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://youtube.com/playlist?list=PLNH1H4kKR1nwEUfTXa45hkos3dAy65jpP"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
