--- a/chem2.html
+++ b/chem2.html
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="_blank" href="https://drive.google.com/drive/folders/1yoNF0tx8Iv-WqT11MsXJcSyq1hanst_o?usp=sharing"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="_blank" href="https://youtube.com/playlist?list=PLNH1H4kKR1nzyFNns649ATFZc2oHqN8TI"><button type="button" class="btn btn-outline-info btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
