--- a/phy1.html
+++ b/phy1.html
@@ -97,7 +97,7 @@
                     <a target="blank" href="https://drive.google.com/drive/folders/1pkhmw5o6ekwJaiBRRvIL8w8FYe0NcX1c?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">BLACKBOARD NOTES</button></a>
                 </div>
                 <div class="col-lg-3 col-md-3 col-sm-12">
-                    <a target="blank" href="https://drive.google.com/drive/folders/1FqYyWe63PH2H-ur7gtI8Zx1tu0ohnG9F?usp=sharing"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
+                    <a target="blank" href="https://youtube.com/playlist?list=PLNH1H4kKR1nw0fcZY4-YrJJVcpHug32LT"><button type="button" class="btn btn-outline-danger btn-sm courses" style="width: 250px;;">ZOOM RECORDINGS</button></a>
                 </div>
 
                 <div class="col-lg-3 col-md-3 col-sm-12">
